--- a/especialistas-web/src/main/webapp/src/modules/hospitales/delete/hospitales.delete.html
+++ b/especialistas-web/src/main/webapp/src/modules/hospitales/delete/hospitales.delete.html
@@ -1,5 +1,5 @@
 <div class="center-block well text-center">
-    <h1>Estas Segur@?</h1>
+    <h3>Confirmar eliminacion</h3>
     <button id="confirm-delete" ng-click="deleteHospital()" class="btn btn-danger">Eliminar</button>
     <a id="cancel-delete" ui-sref="hospitalesList" class="btn btn-info">Cancelar</a>
 </div>
