--- a/especialistas-web/src/main/webapp/src/modules/laboratorios/laboratorios.detail.html
+++ b/especialistas-web/src/main/webapp/src/modules/laboratorios/laboratorios.detail.html
@@ -6,6 +6,7 @@
         {{laboratorioActual.ubicacion.nombre}}
     </div>
     <div class="col-md-12"> <br>
+        <button id="actualizar-lab" ui-sref='labUpdate({laboratorioId: laboratorioActual.id})'>Actualizar</button>
         <button id="eliminar-lab" ui-sref='labDelete({laboratorioId: laboratorioActual.id})'>Eliminar</button>
         <button id="Volver-lista" ui-sref="laboratoriosList">Volver</button>
     </div>       
