--- a/especialistas-web/src/main/webapp/index.html
+++ b/especialistas-web/src/main/webapp/index.html
@@ -33,6 +33,7 @@
         <script src="src/modules/laboratorios/detail.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/laboratorios/delete/labDelete.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/laboratorios/post/labNew.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/laboratorios/update/labUpdate.ctrl.js" type="text/javascript"></script>
 
         <!-- Farmacia-->
         <script src="src/modules/farmacias/farmacias.mod.js" type="text/javascript"></script>
