--- a/especialistas-web/src/main/webapp/src/modules/pagos/pagos.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/pagos/pagos.list.html
@@ -7,6 +7,7 @@
                     <th>Referencia</th>    
                     <th>Precio</th>
                     <th>Paga</th>
+                    <th>MetodoPago</th>
 
                 </tr>
             </thead>
@@ -15,7 +16,8 @@
                     <td id="{{$index}}-id">{{pago.id}}</td>
                     <td id="{{$index}}-ref">{{pago.ref}}</td>
                     <td id="{{$index}}-precio">{{pago.precio}}</td>
-                    <td id="{{$index}}-precio">{{pago.pai}}</td>
+                    <td id="{{$index}}-pai"><span ng-show="pago.pai == true" class="glyphicon glyphicon-ok" aria-hidden="true" style="color: #4cae4c"></span><span ng-show="pago.pai == false" class="glyphicon glyphicon-remove" aria-hidden="true" style="color: #f25"></span></td>
+                    <td>tarjeta</td>
                 </tr>
             </tbody>
         </table>
