--- a/especialistas-web/src/main/webapp/index.html
+++ b/especialistas-web/src/main/webapp/index.html
@@ -91,6 +91,13 @@
         <script src="src/modules/usuarios/new/usuarios.new.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/usuarios/delete/usuarios.delete.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/usuarios/update/usuarios.update.ctrl.js" type="text/javascript"></script>
+        
+        <!--Consultorios-->
+        <script src="src/modules/consultorios/consultorios.mod.js" type="text/javascript"></script>
+        <script src="src/modules/consultorios/consultorios.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/consultorios/create/consultorios.create.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/consultorios/delete/consultorios.delete.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/consultorios/update/consultorios.update.ctrl.js" type="text/javascript"></script>
 
         
         <script src="src/app.js" type="text/javascript"></script> 
