--- a/especialistas-web/src/main/webapp/src/modules/consultorios/consultorios.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/consultorios/consultorios.list.html
@@ -3,30 +3,30 @@
         <table class="table table-striped">
             <thead>
                 <tr>
-                    <th>Número</th>
-                    <th>Eliminar</th>
-                    <th>Editar</th>
+                    <th>NÚMERO</th>
+                    <th>ELIMINAR</th>
+                    <th>EDITAR</th>
                 </tr>
             </thead>
             <tbody>
                 <tr ng-repeat="consultorio in consultoriosRecords">
-                    <td id="{{$index}}-nombre"><a ui-sref="consultorioDetail({consultorioId: consultorio.id})">{{consultorio.nombre}}</a>
+                    <td id="{{$index}}-numero"><a ui-sref="consultorioDetail({consultorioId: consultorio.id})">{{consultorio.numero}}</a>
                     </td>
                     <td>
-                        <button type="button" class="btn btn-default">
+                        <button type="button" class="btn btn-danger" ui-sref="consultorioDelete({consultorioId: consultorio.id})">
                             <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                         </button>
                     </td>
                     <td>
-                        <button type="button" class="btn btn-default">
+                        <button type="button" class="btn btn-info" ui-sref="consultorioUpdate({consultorioId: consultorio.id})">
                             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                         </button>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <button type="button" class="btn btn-default">
-                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                        <button type="button" class="btn btn-success" ui-sref="consultoriosCreate">
+                            <span class="glyphicon glyphicon-plus" aria-hidden="true" ></span>
                         </button>
                     </td>
                 </tr>
