--- a/especialistas-web/src/main/webapp/index.html
+++ b/especialistas-web/src/main/webapp/index.html
@@ -80,6 +80,9 @@
         <!--Pagos-->
         <script src="src/modules/pagos/pagos.mod.js" type="text/javascript"></script>
         <script src="src/modules/pagos/pagos.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/pagos/new/pagos.new.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/pagos/delete/pagos.delete.ctrl.js" type="text/javascript"></script>
+        
         
         <!--Tarjetas-->
         <script src="src/modules/tarjetas/tarjetas.mod.js" type="text/javascript"></script>
