--- a/especialistas-web/src/main/webapp/src/modules/citas/citas.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/citas/citas.list.html
@@ -11,9 +11,10 @@
             <tbody>
                 <tr ng-repeat="cita in citas">
                     <td id="{{$index}}-comentarios"><a ui-sref="citasDetail({citasId: cita.id})">{{cita.comentarios}}</td>
-                    <td> <button id="{{$index}}-reagendar-btn" class="btn btn-default btn-sm" href="#">Reagendar</button></td>
-                    <td> <button id="{{$index}}-cancelar-btn" class="btn btn-default btn-sm" href="#">Cancelar</button></td>
+                    <td> <button id="{{$index}}-reagendar-btn" class="btn btn-default btn-sm" ui-sref="citasUpdate({citasId: cita.id})">Reagendar</button></td>
+                    <td> <button id="{{$index}}-cancelar-btn" class="btn btn-default btn-sm" ui-sref="citasDelete({citasId: cita.id})">Cancelar</button></td>
                 </tr>
+                <tr class="info" ui-sref="citasCreate"><td>Añadir nueva</td><td></td></tr>
             </tbody>
         </table>
     </div>
