--- a/especialistas-web/src/main/webapp/src/modules/laboratorios/laboratorios.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/laboratorios/laboratorios.list.html
@@ -20,7 +20,7 @@
             </tbody>
         </table>
         <div>
-            <button class="btn btn-default btn-sm" ui-sref='labCreate'>Crear</button>
+            <button class="btn btn-info" ui-sref='labCreate'>Crear</button>
         </div>
     </div>
 </div>
