--- a/especialistas-web/src/main/webapp/src/modules/usuarios/usuarios.detail.html
+++ b/especialistas-web/src/main/webapp/src/modules/usuarios/usuarios.detail.html
@@ -20,7 +20,7 @@
                 <dd>{{currentUsuario.nombre}}</dd>
                 <div class="usuario-data">
                     <a href="#" style="color: #f44" ui-sref="usuariosDelete({usuarioId: currentUsuario.id})">Eliminar</a>
-                    <a href="#">Editar</a>
+                    <a href="#" ui-sref="usuarioUpdate({usuarioId: currentUsuario.id})">Editar</a>
                 </div>
 
             </dl>
