--- a/especialistas-web/src/main/webapp/src/modules/examenes/examen.detail.html
+++ b/especialistas-web/src/main/webapp/src/modules/examenes/examen.detail.html
@@ -11,5 +11,5 @@
 <div class="col-md-12"> <br>
     <button id="actualizar-exam" >Actualizar</button>
     <button id="eliminar-exam">Eliminar</button>
-    <button id="Volver-lista" ui-sref="laboratoriosList">Volver</button>
+    <button id="Volver-lista">Volver</button>
 </div>       
