--- a/especialistas-web/src/main/webapp/src/modules/hospitales/hospitales.detail.html
+++ b/especialistas-web/src/main/webapp/src/modules/hospitales/hospitales.detail.html
@@ -34,12 +34,17 @@
                     <tr>
                         <th>ID</th>
                         <th>NÚMERO</th>
+                        <th>ELIMINAR</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr ng-repeat="consultorio in consultorios">
                         <td>{{consultorio.id}}</td>
                         <td><a ui-sref="consultorioDetail({consultorioId: consultorio.id})">{{consultorio.numero}}</a></td>
+                        <td>
+                            <button type="button" class="btn btn-danger" ui-sref="consultorioDelete({hospitalId: currentHospital.id, consultorioId: consultorio.id})">
+                                <span class="glyphicon glyphicon-remove" aria-hidden="true" ></span>
+                        </td>
                     </tr>
                     <tr>
                         <td>
