--- a/especialistas-web/src/main/webapp/src/modules/laboratorios/update/laboratorio.update.html
+++ b/especialistas-web/src/main/webapp/src/modules/laboratorios/update/laboratorio.update.html
@@ -9,31 +9,31 @@
                             <label for="nombreLab" class="col-sm-2">Nombre:</label>
                             <input id="nombreLab" required ng-model="nombreLab" class="form-control"/>
                         </div>
-</div>
-<div class="form-group row">
-    <div class="form-group col-md-6">
-        <label class="col-sm-12">Ingrese los datos de la ubicación</label><br>
-        <br><label for="ubicacion-nombre" class="col-sm-2">Nombre:</label>
-        <input id="ubicacion-nombre" required ng-model="nombreUbicacion" class="col-sm-6"/>
+                    </div>
+                    <div class="form-group row">
+                        <div class="form-group col-md-6">
+                            <label class="col-sm-12">Ingrese los datos de la ubicación</label><br>
+                            <br><label for="ubicacion-nombre" class="col-sm-2">Nombre:</label>
+                            <input id="ubicacion-nombre" required ng-model="nombreUbicacion" class="col-sm-6"/>
                         </div>
                     </div>
                     <div class="form-group row">
                         <div class="form-group col-md-6">
                             <label for="ubicacion-longitud" class="col-sm-2">Longitud:</label>
-                            <input type="number" min="-180" max="180" id="ubicacion-longitud" required ng-model="longitud" class="col-sm-6"/>
+                            <input type="number" min="-180" max="180" step="0.1" id="ubicacion-longitud" required ng-model="longitud" class="col-sm-6"/>
                         </div>
                     </div>
                     <div class="form-group row">
                         <div class="form-group col-md-6">
                             <label for="ubicacion-latitud" class="col-sm-2">Latitud:</label>
-                            <input type="number" min="-90" max="90" id="ubicacion-latitud" required  ng-model="latitud" class="col-sm-6"/>
+                            <input type="number" min="-90" max="90" step="0.1" id="ubicacion-latitud" required  ng-model="latitud" class="col-sm-6"/>
                         </div>
                     </div>
-                    
+
                     <div class="form-group row">
                         <div class="form-group col-sm-4" ng-if="!usuario.$valid">
 
-                          
+
                         </div> 
                     </div> 
                     <div class="form-group row">
