--- a/especialistas-web/src/main/webapp/index.html
+++ b/especialistas-web/src/main/webapp/index.html
@@ -39,6 +39,7 @@
         <script src="src/modules/examenes/examenes.mod.js" type="text/javascript"></script>
         <script src="src/modules/examenes/examen.detail.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/examenes/delete/examenDelete.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/examenes/update/examUpdate.ctrl.js" type="text/javascript"></script>
 
         <!-- Farmacia-->
         <script src="src/modules/farmacias/farmacias.mod.js" type="text/javascript"></script>
