--- a/especialistas-web/src/main/webapp/src/modules/examenes/examen.detail.html
+++ b/especialistas-web/src/main/webapp/src/modules/examenes/examen.detail.html
@@ -17,7 +17,7 @@
         </div>
     </div>
     <div class="panel-footer" style="text-align:center">
-        <button id="actualizar-exam" >Actualizar</button>
+        <button id="actualizar-exam" ui-sref="examenUpdate({examenId: examenActual.id})" >Actualizar</button>
         <button id="eliminar-exam" ui-sref="examenDelete({examenId: examenActual.id})">Eliminar</button>
         <button id="Volver-lista" ui-sref="laboratoriosList">Volver</button>
     </div>
