--- a/especialistas-web/src/main/webapp/src/modules/examenes/update/exam.update.html
+++ b/especialistas-web/src/main/webapp/src/modules/examenes/update/exam.update.html
@@ -4,12 +4,6 @@
             <div class="panel-heading"><label ng-if="!edit" id="createExam">Actualizar examen</label></div>
             <div class="panel-body">
                 <form ng-submit="updateExam()" name="examen">
-                    <div class="form-group row">
-                        <div class="form-group col-md-6">
-                            <label for="nombreExam" class="col-sm-2">Nombre:</label>
-                            <input id="nombreExam" required ng-model="nombreExam" class="form-control"/>
-                        </div>
-</div>
 <div class="form-group row">
     <div class="form-group col-md-6">
         <br><label for="examen-nombre" class="col-sm-2">Nombre:</label>
@@ -19,13 +13,13 @@
                     <div class="form-group row">
                         <div class="form-group col-md-6">
                             <label for="examen-precio" class="col-sm-2">Precio:</label>
-                            <input type="number" id="examen-precio" required ng-model="precioExam" class="col-sm-6"/>
+                            <input type="number" min="10000" max="100000" step="100" id="examen-precio" required ng-model="precioExam" class="col-sm-6"/>
                         </div>
                     </div>
                     <div class="form-group row">
                         <div class="form-group col-md-6">
                             <label for="exam-recomend" class="col-sm-2">Recomendaciones:</label>
-                            <input type="number" min="-90" max="90" id="exam-recomend" required  ng-model="recomendacionesExam" class="col-sm-6"/>
+                            <textarea id="exam-recomend" required  ng-model="recomendacionExam" class="col-sm-6"/></textarea>
                         </div>
                     </div>
                     
