--- a/especialistas-web/src/main/webapp/src/modules/consultorios/delete/consultorios.delete.html
+++ b/especialistas-web/src/main/webapp/src/modules/consultorios/delete/consultorios.delete.html
@@ -1,5 +1,5 @@
 <div class="center-block well text-center">
     <h3>Confirmar eliminacion del consultorio con id: {{idConsultorio}} en el hospital con id: {{idHospital}}</h3>
     <button id="confirm-delete" ng-click="deleteConsultorio()" class="btn btn-danger">Eliminar</button>
-    <a id="cancel-delete" ui-sref="consultoriosList" class="btn btn-info">Cancelar</a>
+    <a id="cancel-delete" ui-sref="hospitalesList" class="btn btn-info">Cancelar</a>
 </div>
