Ajustes barra lateral

--- a/especialistas-web/src/main/webapp/index.html
+++ b/especialistas-web/src/main/webapp/index.html
@@ -124,15 +124,15 @@
         <div id="barra-lateral" class="col-sm-3">
             <ul class="list1">
                 <a href="#">Página Principal <span class="sr-only">(current)</span></a>
-                <a ui-sref="hospitalesList">Hospitales</a>
-                <a ui-sref="usuariosList">Usuarios</a>
-                <a ui-sref="tarjetasList">Tarjetas</a>
-                <a ui-sref="pagosList">Pagos</a>
-                <a ui-sref="farmaciasList">Farmacias</a>
-                <a ui-sref="medicamentosList">Medicamentos</a>
-                <a ui-sref="medicosList">Médicos</a>
-                <a ui-sref="laboratoriosList">Laboratorios</a>
-                <a ui-sref="citasList">Citas</a>
+                <a ui-sref="hospitalesList"><span class="glyphicon glyphicon-header"> Hospitales</span></a>
+                <a ui-sref="usuariosList"><span class="glyphicon glyphicon-user">   Usuarios</span></a>
+                <a ui-sref="tarjetasList"><span class="glyphicon glyphicon-credit-card">   Tarjetas</span></a>
+                <a ui-sref="pagosList"><span class="glyphicon glyphicon-usd">  Pagos</span></a>
+                <a ui-sref="farmaciasList"><span class="glyphicon glyphicon-leaf">  Farmacias</span></a>
+                <a ui-sref="medicamentosList"><span class="glyphicon glyphicon-list-alt">   Medicamentos</span></a>
+                <a ui-sref="medicosList"><span class="glyphicon glyphicon-star-empty">    Médicos</span></a>
+                <a ui-sref="laboratoriosList"><span class="glyphicon glyphicon-search">   Laboratorios</span></a>
+                <a ui-sref="citasList"><span class="glyphicon glyphicon-list">  Citas</span></a>
             </ul>
         </div>
 
