--- a/especialistas-web/src/main/webapp/src/modules/hospitales/hospitales.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/hospitales/hospitales.list.html
@@ -1,5 +1,5 @@
-<div class="container-fluid">
-    <div class="col-md-4">
+<div class="panel panel-default">
+    <div class="col col-md-12">
         <table class="table table-striped">
             <thead>
                 <tr>
