--- a/especialistas-web/src/main/webapp/index.html
+++ b/especialistas-web/src/main/webapp/index.html
@@ -34,6 +34,7 @@
         <script src="src/modules/laboratorios/delete/labDelete.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/laboratorios/post/labNew.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/laboratorios/update/labUpdate.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/laboratorios/add/examenAdd.ctrl.js" type="text/javascript"></script>
         
         <!-- Exámenes -->
         <script src="src/modules/examenes/examenes.mod.js" type="text/javascript"></script>
