--- a/especialistas-web/src/main/webapp/src/modules/laboratorios/add/examen.add.html
+++ b/especialistas-web/src/main/webapp/src/modules/laboratorios/add/examen.add.html
@@ -1,32 +1,30 @@
 <div class="container-fluid">
     <div class="panel-group">
         <div class="panel panel-primary">
-            <div class="panel-heading"><label ng-if="!edit" id="createExam">Actualizar examen</label></div>
+            <div class="panel-heading"><label ng-if="!edit" id="createLab">Agregar examen</label></div>
             <div class="panel-body">
-                <form ng-submit="updateExam()" name="examen">
-<div class="form-group row">
-    <div class="form-group col-md-6">
-        <br><label for="examen-nombre" class="col-sm-4">Nombre:</label>
-        <input id="examen-nombre" required ng-model="nombreExam" class="col-sm-6 form-control"/>
+                <form ng-submit="addExam()" name="examen">
+                    <div class="form-group row">
+                        <div class="form-group col-md-6">
+                            <label for="nombre-exam" class="col-md-4">Nombre:</label>
+                            <input id="nombre-exam" required ng-model="nombreExam" class="form-control"/>
                         </div>
                     </div>
                     <div class="form-group row">
                         <div class="form-group col-md-6">
-                            <label for="examen-precio" class="col-sm-4">Precio:</label>
-                            <input type="number" min="10000" max="100000" step="100" id="examen-precio" required ng-model="precioExam" class="col-sm-6 form-control"/>
+                            <label for="precio-exam" class="col-sm-4">Precio:</label>
+                            <input type="number" min="15000" max="150000" step="100" id="precio-exam" required ng-model="precio" class="col-sm-6 form-control"/>
                         </div>
                     </div>
                     <div class="form-group row">
                         <div class="form-group col-md-6">
-                            <label for="exam-recomend" class="col-sm-4">Recomendaciones:</label>
-                            <textarea id="exam-recomend" required  ng-model="recomendacionExam" class="col-sm-6 form-control"/></textarea>
+                            <label for="recommend-exam" class="col-sm-4">Recomendación:</label>
+                            <textarea id="recommend-exam" required  ng-model="recomendacion" class="col-sm-6 form-control"></textarea>
                         </div>
                     </div>
-                    
+
                     <div class="form-group row">
                         <div class="form-group col-sm-4" ng-if="!usuario.$valid">
-
-                          
                         </div> 
                     </div> 
                     <div class="form-group row">
