--- a/especialistas-web/src/main/webapp/src/modules/laboratorios/laboratorios.detail.html
+++ b/especialistas-web/src/main/webapp/src/modules/laboratorios/laboratorios.detail.html
@@ -36,13 +36,13 @@
             </table>
 
                 <div style="text-align:center">
-                    <button class="btn btn-info">Agregar Examen</button>
+                    <button class="btn btn-info" id="agregar-exam" ui-sref="examAdd({laboratorioId: laboratorioActual.id})">Agregar Examen</button>
                 </div>
         </div>
     </div>
     <div class="panel-footer" style="text-align:center">
-        <button id="actualizar-lab" ui-sref='labUpdate({laboratorioId: laboratorioActual.id})'>Actualizar</button>
-        <button id="eliminar-lab" ui-sref='labDelete({laboratorioId: laboratorioActual.id})'>Eliminar</button>
+        <button id="actualizar-lab" ui-sref="labUpdate({laboratorioId: laboratorioActual.id})">Actualizar</button>
+        <button id="eliminar-lab" ui-sref="labDelete({laboratorioId: laboratorioActual.id})">Eliminar</button>
         <button id="Volver-lista" ui-sref="laboratoriosList">Volver</button>
     </div>
 
