--- a/especialistas-web/src/main/webapp/src/modules/hospitales/hospitales.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/hospitales/hospitales.list.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default">
+<div class="container container-fluid">
     <div class="col col-md-12">
         <table class="table table-striped">
             <thead>
