--- a/especialistas-web/src/main/webapp/src/modules/farmacias/create/farmacia.create.html
+++ b/especialistas-web/src/main/webapp/src/modules/farmacias/create/farmacia.create.html
@@ -1,58 +1,25 @@
-<div class="container-fluid">
-    <div class="panel-group">
-        <div class="panel panel-primary">
-            <div class="panel-heading"><label ng-if="!edit" id="createAuthor">Crear una nueva farmacia</label>
-            <div class="panel-body">
-                <form ng-submit="createFarmacia()" name="farmacia">
-                    <div class="form-group row">
-                        <div class="form-group col-md-6">
-                            <label for="farmaciaName" class="col-sm-2">Name:</label>
-                            <input style="color:black;"  id="farmaciaName" required ng-model="farmaciaName" class="col-sm-6"/>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <div class="form-group col-md-6">
-                            <label for="farmaciaRadio" class="col-sm-2">radio:</label>
-                            <input  style="color:black;" id="farmaciaRadio" required ng-model="farmaciaRadio" class="col-sm-6"/>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <div class="form-group col-md-6">
-                            <label for="ubicacionName" class="col-sm-2">Name Ubicación:</label>
-                            <input style="color:black;" id="ubicacionName" required ng-model="ubicacionName" class="col-sm-6"/>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <div class="form-group col-md-6">
-                            <label for="latitudUbicacion" class="col-sm-2">latitud:</label>
-                            <input style="color:black;" id="latitudUbicacion" required ng-model="latitudUbicacion" class="col-sm-6"/>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <div class="form-group col-md-6">
-                            <label for="longitudUbicacion" class="col-sm-2">longitud:</label>
-                            <input style="color:black;" id="longitudUbicacion" required ng-model="longitudUbicacion" class="col-sm-6"/>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <div class="form-group col-sm-4" ng-if="!usuario.$valid">
-
-                            <div class="alert alert-warning" >
-                                <strong>Warning!</strong><p>All inputs are required*</p>
-                            </div> 
-                        </div> 
-                    </div> 
-                    <div class="form-group row">
-                        <div class="form-group col-sm-12">
-                            <input ng-show="farmacia.$valid" type="submit" value="Save" class="btn btn-success"/>
-                            <a class="btn btn-info" ui-sref="farmaciasList">Cancel</a>
-                        </div>
-                    </div>
-                </form>
-
-            </div>
-        </div>
+<form ng-submit="createFarmacia()" name="farmacia">
+    <div class="form-group">
+        <label for="farmaciaName">Nombre Farmacia</label>
+        <input class="form-control" id="farmaciaName" required ng-model="farmaciaName" placeholder="Ingrese el nombre">
     </div>
-</div>
-</div>
-
+    <div class="form-group">
+        <label for="farmaciaRadio">Radio de alcance</label>
+        <input class="form-control" id="farmaciaRadio" required ng-model="farmaciaRadio" placeholder="e.g. 15">
+    </div>
+    <div class="form-group">
+        <label for="farmaciaName">Nombre de la Ubicación</label>
+        <input class="form-control" id="ubicacionName" required ng-model="ubicacionName" placeholder="Ingrese el nombre de la ubicación">
+    </div>
+    <div class="form-group">
+        <label for="farmaciaName">Latitud</label>
+        <input class="form-control" id="latitudUbicacion" required ng-model="latitudUbicacion" placeholder="e.g. 2.6">
+    </div>
+    <div class="form-group">
+        <label for="farmaciaName">Longitud</label>
+        <input class="form-control" id="longitudUbicacion" required ng-model="longitudUbicacion" placeholder="e.g. 2.6">
+    </div>
+    <input ng-show="farmacia.$valid" type="submit" value="Save" class="btn btn-success"/>
+    <button type="reset" class="btn btn-info">Reiniciar</button>
+    <a class="btn btn-danger" ui-sref="farmaciasList"> Cancelar </a>
+</form>
