Glyphicon Página Principal

--- a/especialistas-web/src/main/webapp/index.html
+++ b/especialistas-web/src/main/webapp/index.html
@@ -123,7 +123,7 @@
         <!--BARRA LATERAL-->
         <div id="barra-lateral" class="col-sm-3">
             <ul class="list1">
-                <a href="#">Página Principal <span class="sr-only">(current)</span></a>
+                <a href="#"><span class="glyphicon glyphicon-home">  Página Principal</span><span class="sr-only">(current)</span></a>
                 <a ui-sref="hospitalesList"><span class="glyphicon glyphicon-header"> Hospitales</span></a>
                 <a ui-sref="usuariosList"><span class="glyphicon glyphicon-user">   Usuarios</span></a>
                 <a ui-sref="tarjetasList"><span class="glyphicon glyphicon-credit-card">   Tarjetas</span></a>
