--- a/especialistas-web/src/main/webapp/src/modules/medicos/medicos.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/medicos/medicos.list.html
@@ -10,7 +10,7 @@
         </thead>
         <tbody>
             <tr ng-repeat="medico in medicosRecords">
-                <td id="{{$index}}-nombre"><a ui-sref="hospitalDetail({medicoId: hospital.id})">{{medico.nombre}}</a>
+                <td id="{{$index}}-nombre"><a ui-sref="medicoDetail({medicoId: medico.id})">{{medico.nombre}}</a>
                 </td>
                 <td>
                     {{medico.especializacion}}
@@ -21,14 +21,14 @@
                     </button>
                 </td>
                 <td>
-                    <button type="button" class="btn btn-info" ui-sref="hospitalUpdate({hospitalId: hospital.id})">
+                    <button type="button" class="btn btn-info" ui-sref="medicoUpdate({medicoId: medico.id})">
                         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                     </button>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <button type="button" class="btn btn-success" ui-sref="hospitalesCreate">
+                    <button type="button" class="btn btn-success" ui-sref="medicosCreate">
                         <span class="glyphicon glyphicon-plus" aria-hidden="true" ></span>
                     </button>
                 </td>
