--- a/especialistas-web/src/main/webapp/src/modules/hospitales/hospitales.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/hospitales/hospitales.list.html
@@ -9,7 +9,7 @@
         </thead>
         <tbody>
             <tr ng-repeat="hospital in hospitalesRecords">
-                <td id="{{$index}}-nombre"><a ui-sref="medicoDetail({hospitalId: hospital.id})">{{hospital.nombre}}</a>
+                <td id="{{$index}}-nombre"><a ui-sref="hospitalDetail({hospitalId: hospital.id})">{{hospital.nombre}}</a>
                 </td>
                 <td>
                     <button type="button" class="btn btn-danger" ui-sref="hospitalDelete({hospitalId: hospital.id})">
