--- a/especialistas-web/src/main/webapp/src/modules/medicos/create/medicos.create.html
+++ b/especialistas-web/src/main/webapp/src/modules/medicos/create/medicos.create.html
@@ -1,37 +1,17 @@
-<alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert()">{{alert.msg}} </alert>
-<div class="container-fluid">
-    <div class="panel-group">
-        <div class="panel panel-primary">
-            <div class="panel-heading"><label ng-if="!edit" id="createMedico">Agregar médico</label>
-                <label ng-if="edit" id="editMedico">Editar Información</label></div>
-            <div class="panel-body">
-                <form ng-submit="createMedico()" name="medico">
-                    <div class="form-group">
-                        <label for="nombreMedico">Nombre</label>
-                        <input id="nombreMedico" required ng-model="nombreMedico" class="form-control"/>
-                    </div>
-                        <div class="form-group">
-                        <label for="especializacionMedico">Especialización</label>
-                        <select class="form-control" id="especializacionMedico" required ng-model="especializacionMedico">
-                            <option ng-repeat="especializacion in especializaciones">{{especializacion.value}}</option>
-                        </select>
-                    </div>
-                    <div class="form-group" ng-if="!medico.$valid">
-                        <div class="alert alert-warning" >
-                            <strong>Atención!</strong><p>Todos los campos son obligatorios</p>
-                        </div> 
-                    </div> 
-                    <div class="form-group row">
-                        <div class="form-group col-sm-12">
-                            <input ng-show="medico.$valid" type="submit" value="Guardar" class="btn btn-success"/>
-                            <a ng-if="!edit" class="btn btn-info" ui-sref="medicosList">Cancelar</a>
-                            <a ng-if="edit" class="btn btn-info" ui-sref="horasList({medicoId})">Cancelar</a>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
+<form ng-submit="createMedico()" name="medico">
+
+    <div class="form-group">
+        <label for="nombre">Nombre</label>
+        <input class="form-control" id="nombreMedico" required ng-model="nombreMedico" placeholder="Ingrese el nombre">
     </div>
-</div>
+    <div class="form-group">
+        <label for="especializacionMedico">Especialización</label>
+        <select class="form-control" id="especializacionMedico" required ng-model="especializacionMedico">
+            <option ng-repeat="especializacion in especializaciones">{{especializacion.value}}</option>
+        </select>
+    </div>
+    <input ng-show="medico.$valid" type="submit" value="Save" class="btn btn-success"/>
+    <button type="reset" class="btn btn-info">Reiniciar</button>
+    <a class="btn btn-danger" ui-sref="medicosList"> Cancelar </a>
 
-
+</form>
