--- a/especialistas-web/src/main/webapp/src/modules/citas/citas.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/citas/citas.list.html
@@ -1,21 +1,32 @@
-<div class="container-fluid">
-    <div class="col-md-6">
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>Citas</th>        
-                    <th></th>  
-                    <th></th>  
-                </tr>
-            </thead>       
-            <tbody>
-                <tr ng-repeat="cita in citas">
-                    <td id="{{$index}}-comentarios"><a ui-sref="citasDetail({citasId: cita.id})">{{cita.comentarios}}</td>
-                    <td> <button id="{{$index}}-reagendar-btn" class="btn btn-default btn-sm" ui-sref="citasUpdate({citasId: cita.id})">Reagendar</button></td>
-                    <td> <button id="{{$index}}-cancelar-btn" class="btn btn-default btn-sm" ui-sref="citasDelete({citasId: cita.id})">Cancelar</button></td>
-                </tr>
-                <tr class="info" ui-sref="citasCreate"><td>Añadir nueva</td><td></td></tr>
-            </tbody>
-        </table>
-    </div>
+<div class="col col-md-12">
+    <table class="table table-condensed">
+        <thead>
+            <tr>
+                <th>CITA</th>
+                <th>ELIMINAR</th>
+                <th>EDITAR</th>
+            </tr>
+        </thead>
+        <tr ng-repeat="cita in citas">
+
+            <td><a ui-sref="citasDetail({citasId: cita.id})">{{cita.comentarios}}</td>
+            <td>
+                <button type="button" class="btn btn-danger" ui-sref="citasDelete({citasId: cita.id})">
+                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                </button>
+            </td>
+            <td>
+                <button type="button" class="btn btn-info" ui-sref="citasUpdate({citasId: cita.id})">
+                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                </button>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <button type="button" class="btn btn-success" ui-sref="citasCreate">
+                    <span class="glyphicon glyphicon-plus" aria-hidden="true" ></span>
+                </button>
+            </td>
+        </tr>
+    </table>
 </div>
