--- a/especialistas-web/src/main/webapp/src/modules/laboratorios/add/examen.add.html
+++ b/especialistas-web/src/main/webapp/src/modules/laboratorios/add/examen.add.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid ">
     <div class="panel-group">
         <div class="panel panel-primary">
             <div class="panel-heading"><label ng-if="!edit" id="createLab">Agregar examen</label></div>
@@ -27,6 +27,17 @@
                         <div class="form-group col-sm-4" ng-if="!usuario.$valid">
                         </div> 
                     </div> 
+
+                    <div id="agregar-existente" class="form-group row">
+                        <label>Seleccione un examen</label>
+                        <select class="form-control" id="nombreExamen" required ng-model="">
+                            <option ng-repeat="examn in examenesList">{{examn.nombre}}</option>
+                        </select>
+                        <br><br>
+                        <input type="submit">
+
+                    </div> 
+
                     <div class="form-group row">
                         <div class="form-group col-sm-12">
                             <input  type="submit" value="Guardar" class="btn btn-success"/>
