Nuevo diseño citas y ordenes

--- a/especialistas-web/src/main/webapp/src/modules/citas/citas.detail.html
+++ b/especialistas-web/src/main/webapp/src/modules/citas/citas.detail.html
@@ -1,9 +1,6 @@
-<div class="row">        
-    <div class="col-md-3">
-        <dl>           
-            <dt>Comentarios</dt>
-            <dd>{{currentCita.comentarios}}</dd>
-
-        </dl>
-    </div>
+<div class="col col-md-6">
+    <font color="#355384">
+    <h3>COMENTARIOS</h3>
+    </font>
+    {{currentCita.comentarios}}
 </div>
