--- a/especialistas-web/src/main/webapp/src/modules/ordenesMedicas/ordenesMedicas.detail.html
+++ b/especialistas-web/src/main/webapp/src/modules/ordenesMedicas/ordenesMedicas.detail.html
@@ -1,13 +1,6 @@
-<div class="panel panel-default"> 
-    <div class="panel-body">
-    <div class="row">        
-        <div class="col-md-3">
-            <dl>           
-                <dt>Descripcion</dt>
-                <dd>{{currentOrden.descripcion}}</dd>
-
-            </dl>
-        </div>
-    </div>
-        </div>
+<div class="col col-md-6">
+    <font color="#355384">
+    <h3>DESCRIPCIÓN</h3>
+    </font>
+    {{currentOrden.descripcion}}
 </div>
