--- a/especialistas-web/src/main/webapp/src/modules/laboratorios/add/examen.add.html
+++ b/especialistas-web/src/main/webapp/src/modules/laboratorios/add/examen.add.html
@@ -1,28 +1,5 @@
 <div class="container-fluid ">
-    <div class="panel-group">
-        <div class="panel panel-primary">
-            <div class="panel-heading"><label ng-if="!edit" id="createLab">Agregar examen</label></div>
-            <div class="panel-body">
                 <form ng-submit="addExam()" name="examen">
-                    <div class="form-group row">
-                        <div class="form-group col-md-6">
-                            <label for="nombre-exam" class="col-md-4">Nombre:</label>
-                            <input id="nombre-exam" required ng-model="nombreExam" class="form-control"/>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <div class="form-group col-md-6">
-                            <label for="precio-exam" class="col-sm-4">Precio:</label>
-                            <input type="number" min="15000" max="150000" step="100" id="precio-exam" required ng-model="precio" class="col-sm-6 form-control"/>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <div class="form-group col-md-6">
-                            <label for="recommend-exam" class="col-sm-4">Recomendación:</label>
-                            <textarea id="recommend-exam" required  ng-model="recomendacion" class="col-sm-6 form-control"></textarea>
-                        </div>
-                    </div>
-
                     <div class="form-group row">
                         <div class="form-group col-sm-4" ng-if="!usuario.$valid">
                         </div> 
@@ -30,25 +7,21 @@
 
                     <div id="agregar-existente" class="form-group row">
                         <label>Seleccione un examen</label>
-                        <select class="form-control" id="nombreExamen" required ng-model="">
-                            <option ng-repeat="examn in examenesList">{{examn.nombre}}</option>
+                        <select class="form-control col-sm-6" id="nombreExamen" required ng-model="examenX">
+                            <option ng-repeat="examn in examenesList" value={{examn}}>{{examn.nombre}}</option>
                         </select>
                         <br><br>
-                        <input type="submit">
 
                     </div> 
 
                     <div class="form-group row">
                         <div class="form-group col-sm-12">
-                            <input  type="submit" value="Guardar" class="btn btn-success"/>
-                            <a class="btn btn-info" ui-sref='laboratoriosList'>Cancel</a>
+                            <input ng-show="examen.$valid" type="submit" value="Guardar" class="btn btn-success"/>
+                            <a class="btn btn-info" ui-sref="laboratoriosList">Cancelar</a>
                         </div>
                     </div>
                 </form>
 
-            </div>
         </div>
-    </div>
-</div>
 
 
