--- a/especialistas-web/src/main/webapp/src/modules/laboratorios/delete/laboratorio.delete.html
+++ b/especialistas-web/src/main/webapp/src/modules/laboratorios/delete/laboratorio.delete.html
@@ -1,5 +1,6 @@
+
 <div class="center-block well text-center">
-    <h1>¿Desea eliminar este laboratorio?</h1>
-    <button id="confirmar-eliminacion" ng-click="deleteLab()" class="btn btn-danger">Eliminar</button>
-    <a id="cancelar-eliminacion" ui-sref="laboratoriosList" class="btn btn-info">Cancelar</a>
+    <h3>Confirmar eliminacion</h3>
+    <button id="confirm-delete" ng-click="deleteLab()" class="btn btn-danger">Eliminar</button>
+    <a id="cancel-delete" ui-sref="laboratoriosList" class="btn btn-info">Cancelar</a>
 </div>
