--- a/especialistas-web/src/main/webapp/src/modules/laboratorios/laboratorios.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/laboratorios/laboratorios.list.html
@@ -1,26 +1,34 @@
-<div class="container-fluid">
-    <div class="col-md-4">
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>Nombre</th>     
-                    <th>Ubicación</th>
-
-                </tr>
-            </thead>
-            <tbody>
-                <tr ng-repeat="laboratorio in laboratoriosRecords">
-                    <td id="{{$index}}-nombre">
-                        <a ui-sref='labDetail({laboratorioId: laboratorio.id})'> {{laboratorio.nombre}}</a>
-                       
-                    </td>
-                    <td id ="{{$index}}-ubicación}">{{laboratorio.ubicacion.nombre}}</td>
-                </tr>
-
-            </tbody>
-        </table>
-        <div>
-            <button class="btn btn-info" ui-sref='labCreate'>Crear</button>
-        </div>
-    </div>
+<div class="col col-md-12">
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>NOMBRE</th>
+                <th>ELIMINAR</th>
+                <th>EDITAR</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr ng-repeat="laboratorio in laboratoriosRecords">
+                <td id="{{$index}}-nombre"><a ui-sref="labDetail({laboratorioId: laboratorio.id})">{{laboratorio.nombre}}</a>
+                </td>
+                <td>
+                    <button type="button" class="btn btn-danger" ui-sref="labDelete({laboratorioId: laboratorio.id})">
+                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                    </button>
+                </td>
+                <td>
+                    <button type="button" class="btn btn-info" ui-sref="labUpdate({laboratorioId: laboratorio.id})">
+                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                    </button>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <button type="button" class="btn btn-success" ui-sref="labCreate">
+                        <span class="glyphicon glyphicon-plus" aria-hidden="true" ></span>
+                    </button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </div>
