--- a/especialistas-web/src/main/webapp/src/modules/laboratorios/update/laboratorio.update.html
+++ b/especialistas-web/src/main/webapp/src/modules/laboratorios/update/laboratorio.update.html
@@ -1,52 +1,24 @@
-<div class="container-fluid">
-    <div class="panel-group">
-        <div class="panel panel-primary">
-            <div class="panel-heading"><label ng-if="!edit" id="createLab">Actualizar laboratorio</label></div>
-            <div class="panel-body">
-                <form ng-submit="updateLab()" name="laboratorio">
-                    <div class="form-group row">
-                        <div class="form-group col-md-6">
-                            <label for="nombreLab" class="col-sm-2">Nombre:</label>
-                            <input id="nombreLab" required ng-model="nombreLab" class="form-control"/>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <div class="form-group col-md-6">
-                            <label class="col-sm-12">Ingrese los datos de la ubicación</label><br>
-                            <br><label for="ubicacion-nombre" class="col-sm-2">Nombre:</label>
-                            <input id="ubicacion-nombre" required ng-model="nombreUbicacion" class="col-sm-6"/>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <div class="form-group col-md-6">
-                            <label for="ubicacion-longitud" class="col-sm-2">Longitud:</label>
-                            <input type="number" min="-180" max="180" step="0.1" id="ubicacion-longitud" required ng-model="longitud" class="col-sm-6"/>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <div class="form-group col-md-6">
-                            <label for="ubicacion-latitud" class="col-sm-2">Latitud:</label>
-                            <input type="number" min="-90" max="90" step="0.1" id="ubicacion-latitud" required  ng-model="latitud" class="col-sm-6"/>
-                        </div>
-                    </div>
-
-                    <div class="form-group row">
-                        <div class="form-group col-sm-4" ng-if="!usuario.$valid">
-
-
-                        </div> 
-                    </div> 
-                    <div class="form-group row">
-                        <div class="form-group col-sm-12">
-                            <input  type="submit" value="Guardar" class="btn btn-success"/>
-                            <a class="btn btn-info" ui-sref='laboratoriosList'>Cancel</a>
-                        </div>
-                    </div>
-                </form>
-
-            </div>
-        </div>
+<form ng-submit="updateLab()" name="laboratorio">
+    
+    <div class="form-group">
+        <label for="laboratorioName">Nombre Laboratorio</label>
+        <input class="form-control" id="laboratorioName" required ng-model="labName" placeholder="Ingrese el nombre">
     </div>
-</div>
-
+    <div class="form-group">
+        <label for="laboratorioUbicacionName">Nombre Ubicación</label>
+        <input class="form-control" id="laboratorioUbicacionName" required ng-model="ubicacionName" placeholder="e.g. Barrios Unidos">
+    </div>
+    <div class="form-group">
+        <label for="laboratorioUbicacionLatitud">Latitud</label>
+        <input class="form-control" id="laboratorioUbicacionLatitud" required ng-model="ubicacionLatitud" placeholder="e.g. 1.100">
+    </div>
+    <div class="form-group">
+        <label for="laboratorioUbicacionLongitud">Longitud</label>
+        <input class="form-control" id="laboratorioUbicacionLongitud" required ng-model="ubicacionLongitud" placeholder="e.g. 1.100">
+    </div>
+    <input ng-show="laboratorio.$valid" type="submit" value="Save" class="btn btn-success"/>
+    <button type="reset" class="btn btn-info">Reiniciar</button>
+    <a class="btn btn-danger" ui-sref="laboratoriosList"> Cancelar </a>
+    
+</form>
 
