--- a/especialistas-web/src/main/webapp/src/modules/medicos/medicos.detail.html
+++ b/especialistas-web/src/main/webapp/src/modules/medicos/medicos.detail.html
@@ -15,7 +15,5 @@
     </div>
 </div>
 <div class="row">
-    <table class="table table-condensed">
-        
-    </table>
+    <div ui-view="childrenView"></div>
 </div>
